Teams: Fix member task overflow (fixes #5539) (#5554)

--- a/src/app/teams/teams-view.scss
+++ b/src/app/teams/teams-view.scss
@@ -12,7 +12,7 @@
   .card-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-template-rows: repeat(auto-fill, 250px);
+    grid-template-rows: repeat(auto-fill, 280px);
     grid-column-gap: 0.25rem;
     mat-card-content {
       max-height: 149px;
